# robot-server

./: docker-compose.yml  main.py  pyproject.toml
api/v1/: routers.py
api/v1/endpoints/: robots.py  webrtc.py
config/: config.py  database.py  webrtc.py
crud/: crud.py  robots.py
models/: Robot.py
schemas/: robots.py
