[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy==2.0.45",
    "pydantic==2.12.5",
    "pydantic-settings==2.11.0",
    "python-dotenv==1.2.1",
    "asyncpg",
    "psycopg2-binary>=2.9.12",
    "aiortc>=1.14.0",
    "aiohttp>=3.14.1",
    "opencv-python-headless>=4.13.0.92",
]
